# Expert-Python-Programming-Fourth-Edition

./: pyproject.toml
Chapter_2/: summary.ipynb  summary.md
Chapter_2/02_Setup_complex_environments/: requirements.txt
Chapter_2/06_Delay_code_startup_until_ports_open/: requirements.txt
Chapter_2/07_Add_live_reload_for_code/: requirements.txt
Chapter_4/: summary.ipynb
Chapter_4/_01_Accessing_super_classes/: caseinsensitive.py
Chapter_4/_02_Multiple_iheritance_MRO/: mro.py
Chapter_4/_03_Class_instance_init/: aggregator_independent.py  aggregator_shared.py
Chapter_4/_04_Descriptors/: reveal_access.py
Chapter_4/_06_Dunder_methods/: matrices.py  matrices_with_scalars.py
Chapter_4/_08_Dataclasses/: vector_dataclasses.py
Chapter_5/: summary.ipynb
Chapter_5/_01_zope_interface/: colliders_interfaces.py  colliders_invariants.py  colliders_simple.py
Chapter_5/_02_function_annotations_ABC/: colliders_abc.py  colliders_subclasshooks.py  dummy_interface.py
Chapter_5/_03_Interfaces_type_annotations/: colliders_protocol.py
Chapter_5/_05_Inversion_of_control_p2/: Dockerfile  backends.py  tracking.py
Chapter_5/_06_dependency_injection/: Dockerfile
Chapter_6/: summary.ipynb
Chapter_6/_01_multithreading/: start_new_thread.py  start_new_threads.py  thread_safe_visits.py  thread_visits.py
Chapter_6/_02_example_threaded_application/: synchronous.py
Chapter_6/_03_one_thread_per_item/: one_thread_per_item.py
Chapter_6/_04_Using_thread_pool/: thread_pool.py
Chapter_6/_05_Using_2way_queues/: two_way_queues.py
Chapter_6/_06_errors_in_threads/: error_handling.py
Chapter_6/_12_async_await/: waiters.py  (+3 more)
(+9 files in other folders)
