[tool.poetry]
name = "expert-python-programming-fourth-edition"
version = "0.1.0"
description = ""
authors = ["William <68653853+will-i-amv@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
