[tool.poetry]
name = "expert-python-programming-fourth-edition"
version = "0.1.0"
description = ""
authors = ["William <68653853+will-i-amv@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.0.0"
werkzeug = "2.2.2"
wait-for-it = "2.1.1"
watchdog = {version = "0.10.3", extras = ["watchmedo"]}
ipython = "^8.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
