[tool.poetry]
name = "expert-python-programming-fourth-edition"
version = "0.1.0"
description = ""
authors = ["William <68653853+will-i-amv@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.2.0"
werkzeug = "2.2.2"
wait-for-it = "2.1.1"
watchdog = {version = "0.10.3", extras = ["watchmedo"]}
ipython = "^8.18.1"
zope-interface = "^6.1"
mypy = "^1.7.1"
redis = "^5.0.1"
injector = "^0.21.0"
flask-injector = "^0.15.0"
requests = "^2.31.0"
aiohttp = "^3.9.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
